implements HTTP GET nodes for the given cluster.
